<resources>
    <string name="accessibility_swipe_refresh">swipe to refresh</string>
    <string name="addon_adm_intro">ADM supports multi-threaded downloads, it was brought to replace XBrowser\'s default downloader</string>
    <string name="addon_adm_title">ADM Downloader</string>
    <string name="addon_aria2app_title">Aria2app Downloader</string>
    <string name="addon_cast_intro">Use with video sniffing feature to play videos on other devices. Supports AirPlay, DLNA and other wireless screen casting protocols.</string>
    <string name="addon_cast_title">Video cast</string>
    <string name="addon_fdm_title">FDM Downloader</string>
    <string name="addon_idm_intro">Integrate IDM downloader into the browser. It supports multi-threaded downloads, BT downloads, download support, m3/u8 videos etc.</string>
    <string name="addon_idm_title">IDM Downloader</string>
    <string name="addon_qrcode_intro">QR code scan addon, supporting more features: Scan QR code, generate URL to QR code, scan QR code from image file</string>
    <string name="addon_qrcode_title">QR Code Scan V1.2.0</string>
    <string name="addon_url_video_cast">https://en.xbext.com/tutorials/how-to-cast-video-to-other-devices/</string>
    <string name="addon_xunlei_title">Thunder Downloader</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">XBrowser</string>
    <string name="app_version">null</string>
    <string name="as_default_downloader">Set As default downloader</string>
    <string name="batch_del_title">Batch delete</string>
    <string name="bf_gesture_bottom">Swipe in the bottom area of ​​the screen</string>
    <string name="bf_gesture_edge">Swipe at the edge of the screen</string>
    <string name="bf_gesture_none">None</string>
    <string name="bf_gesture_normal">Normal swipe</string>
    <string name="btn_text_allow">Allow</string>
    <string name="btn_text_apply">Apply</string>
    <string name="btn_text_block">Block</string>
    <string name="btn_text_camera">Camera</string>
    <string name="btn_text_cancel">Cancel</string>
    <string name="btn_text_check">Check</string>
    <string name="btn_text_copy">Copy</string>
    <string name="btn_text_cut">Cut</string>
    <string name="btn_text_del">Delete</string>
    <string name="btn_text_deny">Deny</string>
    <string name="btn_text_donate">Donate me</string>
    <string name="btn_text_export">Export</string>
    <string name="btn_text_fine_tuning_marked_area">Fine tuning</string>
    <string name="btn_text_finish">Done</string>
    <string name="btn_text_gallery">Gallery</string>
    <string name="btn_text_go_set_default_browser">Go to setting</string>
    <string name="btn_text_help">Help</string>
    <string name="btn_text_import">Import</string>
    <string name="btn_text_install">Install</string>
    <string name="btn_text_mark">Save Mark</string>
    <string name="btn_text_ok">Ok</string>
    <string name="btn_text_open">Open</string>
    <string name="btn_text_qr_scan_from_file">Scan from file</string>
    <string name="btn_text_ranking">Go</string>
    <string name="btn_text_reset">Reset</string>
    <string name="btn_text_restore">Restore</string>
    <string name="btn_text_select_all">Select All</string>
    <string name="btn_text_send">Send to</string>
    <string name="btn_text_set">Set</string>
    <string name="btn_text_share">Share</string>
    <string name="btn_text_submit">Submit</string>
    <string name="btn_text_sync">Sync</string>
    <string name="btn_text_update">Update</string>
    <string name="btn_text_view">View</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="casting_connection_established">Connection established and casting to</string>
    <string name="change_home_page_hint">Fill in your favorite site URL</string>
    <string name="check_box_auto">Following system</string>
    <string name="check_box_clean_app_cache">Clean app cache</string>
    <string name="check_box_clean_cookies">Clean Login Status (Cookies)</string>
    <string name="check_box_clean_form_data">Clean form data</string>
    <string name="check_box_clean_history">Clean history</string>
    <string name="check_box_clean_search_his">Clean search history</string>
    <string name="check_box_clean_storage">Clean LocalStorage</string>
    <string name="check_box_clean_web_cache">Clean web cache</string>
    <string name="check_box_clean_webdata">Clean WebData</string>
    <string name="check_box_do_not_show">Do not show again</string>
    <string name="choose_app">Choose App</string>
    <string name="choose_upload">Choose file to upload:</string>
    <string name="common_bookmark_folder_video">MyVideos</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_name">XBrowser:</string>
    <string name="context_menu_copy_image_link">Copy Image Link</string>
    <string name="context_menu_copy_link">Copy Link</string>
    <string name="context_menu_copy_text">Copy Link Text</string>
    <string name="context_menu_image_mode">View in Image Mode</string>
    <string name="context_menu_mark_ad">Mark as Ad</string>
    <string name="context_menu_offline_reading">Save in WiFi</string>
    <string name="context_menu_open_by_incognito">Open in Incognito Mode</string>
    <string name="context_menu_open_in_bg">Open in Background</string>
    <string name="context_menu_open_new">Open in New Tab</string>
    <string name="context_menu_open_with_fullscreen">Open on Fullscreen</string>
    <string name="context_menu_recognize_qrcode">Capture QR Code</string>
    <string name="context_menu_remve_qa">Remove</string>
    <string name="context_menu_save_image">Save Image</string>
    <string name="context_menu_select_text">Select Text</string>
    <string name="context_menu_send_to_destop">Add to Desktop</string>
    <string name="context_menu_share_image">Share Image</string>
    <string name="copied_to_clipboard">Result has been copied to clipboard.</string>
    <string name="custom_search_hint" formatted="false">http://yoursearch.com/?query=%keywords%</string>
    <string name="default_tabs_folder_name">Tabs</string>
    <string name="default_title">Default</string>
    <string name="define_zxingandroidembedded" />
    <string name="del_select_item_confrim">Are you sure you want to delete the selected item?</string>
    <string name="des_btn_back">Go Back</string>
    <string name="des_btn_close_menu">Close Menu</string>
    <string name="des_btn_exit_browser">Exit Browser</string>
    <string name="des_btn_forward">Go Forward</string>
    <string name="des_btn_home">Go to Homepage</string>
    <string name="des_btn_main_menu">Show Main Menu</string>
    <string name="des_btn_multi_tab">Show Tabs</string>
    <string name="des_btn_new_tab">New Tab</string>
    <string name="des_btn_open_settings">Open Settings</string>
    <string name="des_btn_show_tool_box">Show Tool Box</string>
    <string name="disable_immersion">Disable Immersion</string>
    <string name="dlg_ad_block_stat">Total blocked: %1$d\nRule file #1 blocked: %2$d \nRule file #2 blocked: %3$d\nUser mark rule blocked: %4$d</string>
    <string name="dlg_bm_also_add_to_qa">Also add to Quick Access</string>
    <string name="dlg_bm_dir_hit">Directory Name</string>
    <string name="dlg_bm_title_hit">Title</string>
    <string name="dlg_bm_url_hit">URL</string>
    <string name="dlg_bookmark_select_dir">Select directory</string>
    <string name="dlg_browser_layout_auto">Auto</string>
    <string name="dlg_browser_layout_keep_fullscreen">Full screen mode</string>
    <string name="dlg_browser_layout_keep_toolbar_only">Always show toolbar</string>
    <string name="dlg_browser_layout_lock_both">Lock toolbar/search bar</string>
    <string name="dlg_btn_copy_link">Copy link</string>
    <string name="dlg_clean_adb_log">Clean ad block logs</string>
    <string name="dlg_clean_adb_log_confirm">Are you sure you want to clean all ad blocking logs?</string>
    <string name="dlg_clean_data">Clean data</string>
    <string name="dlg_clean_data_confirm">Are you sure you want to clean all data?</string>
    <string name="dlg_clean_download">Clean downloads</string>
    <string name="dlg_clean_download_confirm">Are you sure you want to clean all download lists, which also clears all tasks being downloaded?</string>
    <string name="dlg_clean_downoad_file">Also remove download files?</string>
    <string name="dlg_clean_history">Clean history</string>
    <string name="dlg_clean_history_confirm">Are you sure you want to clean complete history?</string>
    <string name="dlg_confirm_delete">Confirm Delete</string>
    <string name="dlg_download_size">Size:%1$s</string>
    <string name="dlg_download_size_unknown">Unknown</string>
    <string name="dlg_download_text">Sure you want to download this file?</string>
    <string name="do_not_tran">Do Not Translate</string>
    <string name="lan_en">English</string>
    <string name="lan_fr">French</string>
    <string name="lan_ja">Japanese</string>
    <string name="lan_ko">Korean</string>
    <string name="lan_pt">Portuguese</string>
    <string name="lan_ru">Russian</string>
    <string name="lan_zh">Chinese</string>
    <string name="str_never_auto_update">Never auto updated</string>
    <string name="str_update_every_five_day">Update every five days</string>
    <string name="str_update_every_three_day">Update every three days</string>
    <string name="str_update_once_a_day">Update once a day</string>
    <string name="str_update_weekly">Weekly update</string>
    <string name="sync_tag_autofill">Password/Autofill</string>
    <string name="sync_tag_bookmark">User Bookmarks</string>
    <string name="sync_tag_custom_ad_rule">Custom AD rules</string>
    <string name="sync_tag_opened_tab">Opened Tabs</string>
    <string name="sync_tag_quick_access">Quick Access</string>
    <string name="sync_tag_setting">User Settings</string>
    <string name="sync_tag_userscript">User Scripts</string>
    <string name="web_str_action_add_to_bm">Add current page to bookmarks</string>
    <string name="web_str_action_close_current_tab">Close current tab</string>
    <string name="web_str_action_copy_url">Copy current page URL</string>
    <string name="web_str_action_do_nothing">Do nothing</string>
    <string name="web_str_action_do_refresh">Refresh page</string>
    <string name="web_str_action_do_search">Quick search</string>
    <string name="web_str_action_go_to_home">Go to homepage</string>
    <string name="web_str_action_goto_bottom">Go to bottom of page</string>
    <string name="web_str_action_goto_top">Go to top of page</string>
    <string name="web_str_action_new_tab">Create new tab</string>
    <string name="web_str_action_next_tab">Switch to next tab</string>
    <string name="web_str_action_open_bm">Open Bookmark</string>
    <string name="web_str_action_open_his">Open History</string>
    <string name="web_str_action_open_toolbox">Open page toolbox</string>
    <string name="web_str_action_previous_tab">Switch to previous tab</string>
    <string name="web_str_action_remove_tabs">Remove all tabs</string>
    <string name="web_str_action_revert_closed_tab">Revert closed tab</string>
    <string name="web_str_action_switch_search">Switch Search Engine</string>
    <string name="web_str_action_toggle_fullscreen">Toggle between full and normal screen</string>
</resources>