<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/lan_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/lan_en"/>
        <RadioButton
            android:id="@+id/lan_zh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/lan_zh"/>
        <RadioButton
            android:id="@+id/lan_ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/lan_ru"/>
        <RadioButton
            android:id="@+id/lan_ja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/lan_ja"/>
        <RadioButton
            android:id="@+id/lan_ko"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/lan_ko"/>
        <RadioButton
            android:id="@+id/lan_pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/lan_pt"/>
        <RadioButton
            android:id="@+id/lan_fr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/lan_fr"/>
        <RadioButton
            android:id="@+id/do_not_tran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/do_not_tran"/>
    </RadioGroup>
</RelativeLayout>
