<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/scroll_view_content"
        android:layout_width="match_parent"
        android:layout_height="600dp">
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_goto_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_go_to_home"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_goto_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:checked="true"
                android:text="@string/web_str_action_goto_top"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_goto_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_goto_bottom"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_do_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_do_search"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_new_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_new_tab"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_remove_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_remove_tabs"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_do_refresh"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_close_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_close_current_tab"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_revert_close_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_revert_closed_tab"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_previous_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_previous_tab"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_next_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_next_tab"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_add_to_bm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_add_to_bm"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_copy_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_copy_url"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_open_toolbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_open_toolbox"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_toggle_fullscreen"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_toggle_fullscreen"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_open_bm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_open_bm"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_open_his"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_open_his"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_switch_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_switch_search"/>
            <RadioButton
                android:textColor="@color/neutral_text_color"
                android:id="@+id/ac_none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/web_str_action_do_nothing"/>
        </RadioGroup>
    </ScrollView>
</RelativeLayout>
