<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/clean_his"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="false"
            android:text="@string/check_box_clean_history"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/clean_search_his"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="false"
            android:text="@string/check_box_clean_search_his"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/clean_web_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="false"
            android:text="@string/check_box_clean_web_cache"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/clean_app_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="false"
            android:text="@string/check_box_clean_app_cache"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/clean_form_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="false"
            android:text="@string/check_box_clean_form_data"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/clean_cookies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="false"
            android:text="@string/check_box_clean_cookies"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/clean_local_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="false"
            android:text="@string/check_box_clean_storage"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/clean_web_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="false"
            android:text="@string/check_box_clean_webdata"/>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <Button
            android:textSize="16sp"
            android:id="@+id/btn_cancel"
            android:background="@drawable/btn_cancel_selector"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/btn_text_cancel"
            android:layout_weight="1"
            android:stateListAnimator="@null"/>
        <Button
            android:textSize="16sp"
            android:textColor="@color/white"
            android:id="@+id/btn_ok"
            android:background="@drawable/btn_ok_selector"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/btn_text_ok"
            android:layout_weight="1"
            android:stateListAnimator="@null"/>
    </LinearLayout>
</LinearLayout>
