<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/bookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/sync_tag_bookmark"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/quick_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/sync_tag_quick_access"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/sync_tag_setting"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/user_script"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/sync_tag_userscript"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/passwd_and_auto_fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/sync_tag_autofill"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/sync_tag_opened_tab"/>
        <CheckBox
            android:textColor="@color/neutral_text_color"
            android:id="@+id/custom_ad_rule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/sync_tag_custom_ad_rule"/>
    </LinearLayout>
</LinearLayout>
