<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/update_setting_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:textColor="@color/neutral_text_color"
            android:id="@+id/never_backup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/str_never_auto_update"/>
        <RadioButton
            android:textColor="@color/neutral_text_color"
            android:id="@+id/one_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/str_update_once_a_day"/>
        <RadioButton
            android:textColor="@color/neutral_text_color"
            android:id="@+id/three_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/str_update_every_three_day"/>
        <RadioButton
            android:textColor="@color/neutral_text_color"
            android:id="@+id/five_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/str_update_every_five_day"/>
        <RadioButton
            android:textColor="@color/neutral_text_color"
            android:id="@+id/seven_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/str_update_weekly"/>
    </RadioGroup>
</RelativeLayout>
