<?xml version="1.0" encoding="utf-8"?>
<com.mmbox.xbrowser.PhoneTooBarContainer xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_gravity="bottom"
    android:orientation="horizontal"
    android:id="@+id/toolbar_container"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageButton
        android:id="@+id/toolbar_btn_back"
        android:padding="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        android:layout_weight="1"
        android:contentDescription="@string/des_btn_back"
        style="@style/StdBarElement"/>
    <ImageButton
        android:id="@+id/toolbar_btn_forward"
        android:padding="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/multi_state_btn_forward"
        android:layout_weight="1"
        android:contentDescription="@string/des_btn_forward"
        style="@style/StdBarElement"/>
    <ImageButton
        android:id="@+id/toolbar_btn_menu"
        android:padding="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu"
        android:layout_weight="1"
        android:contentDescription="@string/des_btn_main_menu"
        style="@style/StdBarElement"/>
    <com.mmbox.widget.IndicatorImageButton
        android:id="@+id/toolbar_btn_muti_window"
        android:padding="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_muti_window"
        android:layout_weight="1"
        android:contentDescription="@string/des_btn_multi_tab"
        style="@style/StdBarElement"/>
    <ImageButton
        android:id="@+id/toolbar_btn_home"
        android:padding="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_home"
        android:layout_weight="1"
        android:contentDescription="@string/des_btn_home"
        style="@style/StdBarElement"/>
</com.mmbox.xbrowser.PhoneTooBarContainer>
