<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:textColor="@color/neutral_text_color"
            android:id="@+id/bf_gesture_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/bf_gesture_none"/>
        <RadioButton
            android:textColor="@color/neutral_text_color"
            android:id="@+id/bf_gesture_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/bf_gesture_normal"/>
        <RadioButton
            android:textColor="@color/neutral_text_color"
            android:id="@+id/bf_gesture_edge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/bf_gesture_edge"/>
        <RadioButton
            android:textColor="@color/neutral_text_color"
            android:id="@+id/bf_gesture_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/bf_gesture_bottom"/>
    </RadioGroup>
</RelativeLayout>
